--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,7 @@
-@import './reset';
+@import 'reset';
+
+@import 'variables';
+@import 'mixins';
+
+@import 'font-awesome';
+@import 'left_contents';
