--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,2 +1,11 @@
-%h1 Messages#index
-%p Find me in app/views/messages/index.html.haml
+.wrapper
+  .left-contents
+    .left-header
+      .left-header__box
+        .left-header__box__name
+          tarou
+        .left-header__box__btn
+          = link_to root_path do
+            %i.fa.fa-edit 
+          = link_to root_path do
+            %i.fa.fa-cog 
