--- a/app/assets/stylesheets/_left_contents.scss
+++ b/app/assets/stylesheets/_left_contents.scss
@@ -1,22 +1,47 @@
-.left-contents{
+a {
+  text-decoration: none;
+  &:visited {
+    color: $white;
+  }
+}
+
+.left-contents {
   width: 300px;
-  color: #ffffff;
+  color: $white;
   float: left;
 }
 
-.left-contents .left-header{
+.left-contents .left-header {
   background-color: #253141;
   height: 96px;
   display: flex;
   align-items: center; 
   padding: 0 20px;
-  &__box{
+  &__box {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    &__name{
+    &__name {
       font-weight: bold;
       font-size: 16px;
     }
+  }
+}
+
+.left-contents .groups {
+  padding: 20px 20px 0;
+  background-color: #2f3e51;
+  height: calc(100vh - 96px);
+}
+
+.left-contents .groups .group {
+  font-weight: bold;
+  padding-bottom: 40px;
+  &__name {
+    font-size: 15px;
+    padding-bottom: 5px;
+  }
+  &__message {
+    font-size: 11px;
   }
 }
