--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,11 +1,15 @@
 .wrapper
+  .header
+    グループを作成しました
   .left-contents
     .left-header
       .left-header__box
         .left-header__box__name
-          tarou
+          kk
         .left-header__box__btn
           = link_to root_path do
             %i.fa.fa-edit 
           = link_to root_path do
             %i.fa.fa-cog 
+    .groups
+      = render 'group'
