--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -5,7 +5,7 @@
     .left-header
       .left-header__box
         .left-header__box__name
-          kk
+          tarou
         .left-header__box__btn
           = link_to root_path do
             %i.fa.fa-edit 
