--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -13,3 +13,17 @@
             %i.fa.fa-cog 
     .groups
       = render 'group'
+  .contents
+    .content-header
+      .content-header__group
+        %h1.content-header__group__group-name
+          test
+        %ul.content-header__group__member
+          Member：
+          %li.content-header__group__member__name
+            tarou
+          %li.content-header__group__member__name
+            jirou
+      = link_to root_path do
+        .content-header__btn
+          Edit
