--- a/app/assets/stylesheets/_contents.scss
+++ b/app/assets/stylesheets/_contents.scss
@@ -1,35 +1,59 @@
 .contents {
   width: calc(100vw - 300px);
   float: left;
-  .content-header {
-    height: 96px;  
-    border-bottom: 1px solid;
-    border-color: #eeeeee;
-    padding: 0 40px;
-    @include space;
-    &__group {
-      margin-top: 35px; 
-      &__group-name {
-        @include font(#333333, 20px);
-        margin-bottom: 15px;
-      }
-      &__member {
-        @include font(#999999, 12px);
-        text-align: right;
-        &__name {
-          display: inline;
-        }
+}
+
+.contents .content-header {
+  height: 96px;  
+  border-bottom: 1px solid;
+  border-color: #eeeeee;
+  padding: 0 40px;
+  @include space;
+  &__group {
+    margin-top: 35px; 
+    &__group-name {
+      @include font(#333333, 20px);
+      margin-bottom: 15px;
+    }
+    &__member {
+      @include font(#999999, 12px);
+      text-align: right;
+      &__name {
+        display: inline;
       }
     }
-    &__btn {
-      margin-top: 28px;
-      padding: 0 20px;
-      height: 40px;
-      line-height: 40px;
-      border: 1px solid;
-      border-color: $blue;
-      color: $blue;
-      display: block;
+  }
+  &__btn {
+    margin-top: 28px;
+    padding: 0 20px;
+    height: 40px;
+    line-height: 40px;
+    border: 1px solid;
+    border-color: $blue;
+    color: $blue;
+    display: block;
+  }
+}
+
+.contents .main-chat {
+  background-color: #fafafa;
+  height: calc(100vh - 96px);
+  padding: 46px 40px 0;
+  .chat-box {
+    color: #434A54;
+    margin-bottom: 40px;
+    &__user-name {
+      @include font(#434A54, 16px);
+      display: flex;
+      margin-bottom: 10px;
+      font-weight: bold;
+      &__time {
+        @include font(#999999, 12px);
+        margin-left: 10px;
+      }
+    }
+    &__text {
+      @include font(#434A54, 14px);
     }
   }
 }
