--- a/app/assets/stylesheets/_left_contents.scss
+++ b/app/assets/stylesheets/_left_contents.scss
@@ -13,13 +13,12 @@ a {
 
 .left-contents .left-header {
   background-color: #253141;
-  height: 96px;
+  height: 100px;
   display: flex;
   align-items: center; 
   padding: 0 20px;
   &__box {
-    display: flex;
-    justify-content: space-between;
+    @include space;
     width: 100%;
     &__name {
       font-weight: bold;
@@ -29,9 +28,10 @@ a {
 }
 
 .left-contents .groups {
+  height: calc(100vh - 100px);
   padding: 20px 20px 0;
   background-color: #2f3e51;
-  height: calc(100vh - 96px);
+  overflow: scroll;
 }
 
 .left-contents .groups .group {
