--- a/app/assets/stylesheets/_contents.scss
+++ b/app/assets/stylesheets/_contents.scss
@@ -4,7 +4,7 @@
 }
 
 .contents .content-header {
-  height: 96px;  
+  height: 100px;  
   border-bottom: 1px solid;
   border-color: #eeeeee;
   padding: 0 40px;
@@ -37,10 +37,10 @@
 
 .contents .main-chat {
   background-color: #fafafa;
-  height: calc(100vh - 96px);
+  height: calc(100vh - 200px);
   padding: 46px 40px 0;
+  overflow: scroll;
   .chat-box {
-    color: #434A54;
     margin-bottom: 40px;
     &__user-name {
       @include font(#434A54, 16px);
