devise_user_edit_create

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,15 +1,13 @@
 .wrapper
-  .header
-    グループを作成しました
   .left-contents
     .left-header
       .left-header__box
         .left-header__box__name
-          tarou
+          = current_user.name
         .left-header__box__btn
           = link_to root_path do
             %i.fa.fa-edit 
-          = link_to root_path do
+          = link_to edit_user_path(current_user) do
             %i.fa.fa-cog 
     .groups
       = render 'group'
