--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,16 +1,5 @@
 .wrapper
-  .left-contents
-    .left-header
-      .left-header__box
-        .left-header__box__name
-          = current_user.name
-        .left-header__box__btn
-          = link_to new_group_path do
-            %i.fa.fa-edit 
-          = link_to edit_user_path(current_user) do
-            %i.fa.fa-cog 
-    .groups
-      = render 'group'
+  = render "shared/left_contents"
   .contents
     .content-header
       .content-header__group
