group_edit_function_create

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -11,7 +11,7 @@
             tarou
           %li.content-header__group__member__name
             jirou
-      = link_to root_path do
+      = link_to "/groups/1/edit" do
         .content-header__btn
           Edit
     .main-chat
