--- a/app/assets/stylesheets/modules/_contents.scss
+++ b/app/assets/stylesheets/modules/_contents.scss
@@ -36,8 +36,8 @@
 }
 
 .contents .main-chat {
-  background-color: #fafafa;
-  height: calc(100vh - 200px);
+  background-color: #fadfafa;
+  height: calc(100vh - 246px);
   padding: 46px 40px 0;
   overflow: scroll;
   .chat-box {
