--- a/app/assets/stylesheets/modules/_form.scss
+++ b/app/assets/stylesheets/modules/_form.scss
@@ -1,17 +1,22 @@
 .form {
-  background-color: #c0c0c0;
-  padding: 10px 40px;
+  background-color: #dddd;
+  padding: 0 40px;
+  height: 100px;
+  display: flex;
+  align-items: center;
 }
 
 .form .message{
   display: flex;
+  width: 100%;
 }
 
 .form .message .form-box {
   width: 100%;
+  height: 50px;
   position: relative;
   &__text {
-    width: calc(100% - 20px);
+    width: calc(100% - 15px);
     height: 50px;
     padding: 0 10px;
     @include font(#434A54, 16px);
