--- a/app/assets/stylesheets/modules/_contents.scss
+++ b/app/assets/stylesheets/modules/_contents.scss
@@ -36,12 +36,12 @@
 }
 
 .contents .main-chat {
-  background-color: #fadfafa;
+  background-color: #fafafa;
   height: calc(100vh - 246px);
   padding: 46px 40px 0;
   overflow: scroll;
   .chat-box {
-    margin-bottom: 40px;
+    margin-bottom: 40px; 
     &__user-name {
       @include font(#434A54, 16px);
       display: flex;
@@ -50,6 +50,7 @@
       &__time {
         @include font(#999999, 12px);
         margin-left: 10px;
+        font-weight: normal;
       }
     }
     &__text {
