--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,9 +1,11 @@
 .chat-box
-  .chat-box__user-name
-    = message.user.name
-    .chat-box__user-name__time
-      = message.created_at.in_time_zone('Tokyo').strftime('%Y/%m/%d(%a) %T')
-  - if message.body.present?
-    %p.chat-box__text
-      = message.body
-  = image_tag message.image.url if message.image.present?
+  .top-message
+    .top-message__user-name
+      = message.user.name
+      .top-message__user-name__time
+        = message.created_at.in_time_zone('Tokyo').strftime('%Y/%m/%d(%a) %T')
+  .bottom-message
+    - if message.body.present?
+      %p.bottom-message__text
+        = message.body
+    = image_tag message.image.url if message.image.present?
