--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -14,9 +14,11 @@
     / この部分はインクリメンタルサーチ(ユーザー追加の非同期化)のときに使用します
   .chat-group-form__field
     .chat-group-form__field--left
-      = f.label :チャットメンバー, class: "chat-group-form__label"
+      = f.label :チャットメンバーを追加, class: "chat-group-form__label"
     .chat-group-form__field--right
-      = f.collection_check_boxes(:user_ids, User.all, :id, :name)
+      .chat-group-form__search.clearfix
+        = f.text_field :keyword, value: "", class: 'chat-group-form__input', id: 'user-search-field', placeholder: '追加したいユーザー名を入力してください'
+        #user-search-result
       / グループ作成機能の追加時はここにcollection_check_boxesの記述を入れてください
       / この部分はインクリメンタルサーチ(ユーザー追加の非同期化)のときにも使用します
   .chat-group-form__field
