--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -19,7 +19,7 @@
       .chat-group-form__search.clearfix
         = f.text_field :keyword, value: "", class: 'chat-group-form__input', id: 'user-search-field', placeholder: '追加したいユーザー名を入力してください'
         #user-search-result
-      / グループ作成機能の追加時はここにcollection_check_boxesの記述を入れてください
+        #chat-group-users
       / この部分はインクリメンタルサーチ(ユーザー追加の非同期化)のときにも使用します
   .chat-group-form__field
     .chat-group-form__field--left
