--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -10,8 +10,7 @@
       = f.label :name, "グループ名", class: "chat-group-form__label", for: "chat_group_name"
     .chat-group-form__field--right
       = f.text_field :name, placeholder: "グループ名を入力してください", class: "chat_group_name chat-group-form__input"
-  .chat-group-form__field
-    / この部分はインクリメンタルサーチ(ユーザー追加の非同期化)のときに使用します
+      = f.hidden_field :id, class: "chat__group_id", value: group.id
   .chat-group-form__field
     .chat-group-form__field--left
       = f.label :チャットメンバーを追加, class: "chat-group-form__label"
@@ -19,8 +18,18 @@
       .chat-group-form__search.clearfix
         = f.text_field :keyword, value: "", class: 'chat-group-form__input', id: 'user-search-field', placeholder: '追加したいユーザー名を入力してください'
         #user-search-result
-        #chat-group-users
-      / この部分はインクリメンタルサーチ(ユーザー追加の非同期化)のときにも使用します
+  .chat-group-form__field
+    .chat-group-form__field--left
+      = f.label :チャットメンバー, class: "chat-group-form__label"
+    .chat-group-form__field--right
+      - group.users.each do |user|
+        .chat-group-user
+          %input{ name: "group[user_ids][]", type: 'hidden', value: "#{user.id}" }
+          %p.chat-group-user__name
+            = user.name
+          .user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn
+            削除
+      #chat-group-users
   .chat-group-form__field
     .chat-group-form__field--left
     .chat-group-form__field--right
