--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -3,7 +3,7 @@
     .top-message__user-name
       = message.user.name
       .top-message__user-name__time
-        = message.created_at.in_time_zone('Tokyo').strftime('%Y/%m/%d(%a) %T')
+        = message.created_at.to_s(:ja)
   .bottom-message
     - if message.body.present?
       %p.bottom-message__text
